--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "@tensorflow/tfjs": "^4.2.0",
     "axios": "^1.3.4",
     "element-plus": "^2.2.32",
     "vue": "^3.2.47",
